k8s/namespace.yaml
# namespace dedie pour isoler nos ressources
apiVersion: v1
kind: Namespace
metadata:
  name: cinescope
