k8s/frontend-deployment.yaml
# deployment du front nginx
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cinescope
  labels:
    app: cinescope
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cinescope
      tier: frontend
  template:
    metadata:
      labels:
        app: cinescope
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: films-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
